# nomad-UIBK-plugin

./: .cruft.json  404.html  README.md  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml
.github/workflows/: actions.yml  cruft-update.yml
docs/: index.md
docs/how_to/: contribute_to_this_plugin.md  install_this_plugin.md  use_this_plugin.md
docs/reference/: references.md
docs/tutorial/: tutorial.md  tutorial_ifm.md
explanation/: explanation.html
how_to/: contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/nomad_ubik_plugin/parsers/: XRFparser.py  __init__.py  myparser.py
src/nomad_ubik_plugin/schema_packages/: XRFreader.py  XRFschema.py  __init__.py  mypackage.py
src/nomad_uibk_plugin/: utils.py
src/nomad_uibk_plugin/filereader/: IFMreader.py  sputterreader.py
src/nomad_uibk_plugin/parsers/: SEMparser.py  XRFparser.py  __init__.py  microcellparsers.py  myparser.py  sputterparser.py
src/nomad_uibk_plugin/schema_packages/: IFMschema.py  SEMschema.py  XRFreader.py  XRFschema.py  __init__.py  basesections.py  microcellschema.py  mypackage.py  sample.py  sputtering.py
tests/: test_ifm_schema.py  test_sputter_schema.py
tests/data/: IFM_Sample_1_info.xml  IFM_Sample_prediction.csv  QNT20220823_A1_2m.txt  test.archive.yaml  test_IFMAnalysis.archive.json  test_IFMMeasurement.archive.json  test_IFMModel.archive.json
tests/parsers/: test_myparser.py  test_parser.py
tutorial/: tutorial.html  tutorial_ifm.html
